--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.ScreenManager.mobilescreenmanager">
+
+    <!-- Permissões necessárias para funcionamento da aplicação -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
         android:allowBackup="true"
@@ -12,15 +20,39 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileScreenManager"
         tools:targetApi="31">
+
+        <!-- Atividade Principal -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <!-- Serviços de Controle de Orientação -->
+        <service
+            android:name=".containers.orientation_manager.OrientationService"
+            android:enabled="true"
+            android:exported="false"/>
+
+
+        <!-- Broadcast Receiver para Detecção de Mudanças -->
+        <receiver
+            android:name=".containers.orientation_manager.OrientationReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.ScreenManager.ORIENTATION_CHANGE"/>
+            </intent-filter>
+        </receiver>
+
+        <!-- Serviço para Monitorar Atividade -->
+        <service
+            android:name=".containers.fullscreencardviewpager.FullScreenService"
+            android:enabled="true"
+            android:exported="false"/>
     </application>
 
 </manifest>
